<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_131sdp"
        android:background="@color/ss_border"
        android:orientation="horizontal"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_10sdp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message"
                android:textColor="@color/black2"
                android:textSize="@dimen/_32sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_app_for_instant_and_secure_communication"
                android:textColor="@color/black2"
                android:textSize="@dimen/_10sdp" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layoutArchive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_margin="@dimen/_10ssp"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/archive" />

                <TextView
                    android:id="@+id/tvArchive"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_10ssp"
                    android:gravity="center"
                    android:text="@string/archive"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_15sdp"
                        android:layout_gravity="center"
                        android:src="@drawable/arrow" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutBlockMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10ssp"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="@dimen/_20ssp"
                    android:layout_height="@dimen/_20ssp"
                    android:src="@drawable/block" />

                <TextView
                    android:id="@+id/tvBlockMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_10ssp"
                    android:gravity="center"
                    android:text="@string/block_message"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_15sdp"
                        android:layout_gravity="center"
                        android:src="@drawable/arrow" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutScheduleMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10ssp"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="@dimen/_20ssp"
                    android:layout_height="@dimen/_20ssp"
                    android:src="@drawable/calender" />

                <TextView
                    android:id="@+id/tvRescheduleMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_10ssp"
                    android:gravity="center"
                    android:text="@string/schedule_message"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_15sdp"
                        android:layout_gravity="center"
                        android:src="@drawable/arrow" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10ssp"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="@dimen/_20ssp"
                    android:layout_height="@dimen/_20ssp"
                    android:src="@drawable/language" />

                <TextView
                    android:id="@+id/tvLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_10ssp"
                    android:gravity="center"
                    android:text="@string/language"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_15sdp"
                        android:layout_gravity="center"
                        android:src="@drawable/arrow" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutPrivacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10ssp"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="@dimen/_20ssp"
                    android:layout_height="@dimen/_20ssp"
                    android:src="@drawable/privacy" />

                <TextView
                    android:id="@+id/tvPrivacy"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_10ssp"
                    android:gravity="center"
                    android:text="@string/privacy"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_15sdp"
                        android:layout_gravity="center"
                        android:src="@drawable/arrow" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
